Add an html based summary

--- a/TermDepositMarketing_part1.ipynb
+++ b/TermDepositMarketing_part1.ipynb
@@ -128,7 +128,9 @@
    "id": "0dcee871-cafa-4df7-a21c-5be1bdbc1fd5",
    "metadata": {},
    "source": [
-    "### 1.1. Exploratory Data Analysis\n"
+    "<a id=\"11-exploratory-data-analysis\"></a>\n",
+    "### 1.1. Exploratory Data Analysis\n",
+    "\n"
    ]
   },
   {
@@ -1271,6 +1273,7 @@
    "id": "732cb8ac-7985-445e-9ef3-b1c6740ca840",
    "metadata": {},
    "source": [
+    "<a id=\"12-engineering-and-encoding-strategy-per-feature\"></a>\n",
     "### 1.2. Engineering and Encoding Strategy per Feature"
    ]
   },
@@ -1771,6 +1774,7 @@
    "id": "31ad649a-fc40-4ce7-a645-6a578006f9a1",
    "metadata": {},
    "source": [
+    "<a id=\"13-baseline\"></a>\n",
     "### 1.3. Baseline"
    ]
   },
@@ -2785,6 +2789,7 @@
    "id": "74994552-e145-4f89-9ba6-d918eb689e08",
    "metadata": {},
    "source": [
+    "<a id=\"section-2-business-modeling\"></a>\n",
     "## Section 2. Business Modeling\n"
    ]
   },
@@ -2873,6 +2878,7 @@
    "id": "0ac773e7-dba1-4b6b-bf45-661230f40f8d",
    "metadata": {},
    "source": [
+    "<a id=\"21-pre-call-features\"></a>\n",
     "#### 2.1. Pre-call Features\n"
    ]
   },
@@ -2898,6 +2904,7 @@
    "id": "06a555d5-4e9c-4cd1-9072-ea2c741c815e",
    "metadata": {},
    "source": [
+    "<a id=\"22-code-to-train--evaluate-pre-call-model\"></a>\n",
     "#### 2.2. Code to Train + Evaluate Pre-call Model"
    ]
   },
@@ -3572,6 +3579,7 @@
    "id": "0ce6bf53-7ab5-4d13-a8e4-beea33f164ab",
    "metadata": {},
    "source": [
+    "<a id=\"23-selecting-the-model-a-step-by-step-strategy\"></a>\n",
     "### 2.3. Selecting the second model (step 1B)"
    ]
   },
@@ -4200,6 +4208,7 @@
    "id": "8e479e2c-1f3e-457e-b614-df905e91dcf1",
    "metadata": {},
    "source": [
+    "<a id=\"24-create-the-two-stage-prediction-pipeline\"></a>\n",
     "### 2.4. Create the Two-Stage Prediction Pipeline"
    ]
   },
@@ -4355,6 +4364,7 @@
    "id": "83b6d5c8-57dc-4216-aa44-61421c18f599",
    "metadata": {},
    "source": [
+    "<a id=\"25-adjusting-the-decision-threshold-for-both-stages\"></a>\n",
     "### 2.5. Adjusting the decision threshold for both stages"
    ]
   },
@@ -4913,6 +4923,7 @@
    "id": "3d6aae0b-ede4-4d3d-bce8-69b56d2e6470",
    "metadata": {},
    "source": [
+    "<a id=\"26-campaign-simulation-best-case-subscription-ranking\"></a>\n",
     "### 2.6. Campaign Simulation: Best-Case Subscription Ranking"
    ]
   },
@@ -5482,6 +5493,7 @@
    "id": "95d06887-b782-4e75-9028-96bff8f70a36",
    "metadata": {},
    "source": [
+    "<a id=\"3-tangible-results-for-the-bank\"></a>\n",
     "## Section 3. Tangible results for the Bank:"
    ]
   },
@@ -5806,6 +5818,7 @@
    "id": "7a67e11b-d8f9-4425-955c-6a8a5c0c5242",
    "metadata": {},
    "source": [
+    "<a id=\"final-business-conclusion\"></a>\n",
     "# Final Business Conclusion:"
    ]
   },
