Updale the summary links using html

--- a/TermDepositMarketing_part1.ipynb
+++ b/TermDepositMarketing_part1.ipynb
@@ -119,7 +119,6 @@
    "id": "05ac8b33-0bf5-4596-8be2-fd72e1122233",
    "metadata": {},
    "source": [
-    "<a id=\"exploration\"></a>\n",
     "## Section 1. Exploration"
    ]
   },
@@ -128,9 +127,7 @@
    "id": "0dcee871-cafa-4df7-a21c-5be1bdbc1fd5",
    "metadata": {},
    "source": [
-    "<a id=\"11-exploratory-data-analysis\"></a>\n",
-    "### 1.1. Exploratory Data Analysis\n",
-    "\n"
+    "<h3 id=\"11-exploratory-data-analysis\">1.1. Exploratory Data Analysis</h3>\n"
    ]
   },
   {
@@ -1273,8 +1270,7 @@
    "id": "732cb8ac-7985-445e-9ef3-b1c6740ca840",
    "metadata": {},
    "source": [
-    "<a id=\"12-engineering-and-encoding-strategy-per-feature\"></a>\n",
-    "### 1.2. Engineering and Encoding Strategy per Feature"
+    "<h3 id=\"12-engineering-and-encoding-strategy-per-feature\">1.2. Engineering and Encoding Strategy per Feature</h3>"
    ]
   },
   {
@@ -1774,8 +1770,7 @@
    "id": "31ad649a-fc40-4ce7-a645-6a578006f9a1",
    "metadata": {},
    "source": [
-    "<a id=\"13-baseline\"></a>\n",
-    "### 1.3. Baseline"
+    "<h3 id=\"13-baseline\">1.3. Baseline</h3>\n"
    ]
   },
   {
@@ -2789,8 +2784,7 @@
    "id": "74994552-e145-4f89-9ba6-d918eb689e08",
    "metadata": {},
    "source": [
-    "<a id=\"section-2-business-modeling\"></a>\n",
-    "## Section 2. Business Modeling\n"
+    "<h3 id=\"section-2-business-modeling\" style=\"font-size:36px;\">Section 2. Business Modeling</h3>\n"
    ]
   },
   {
@@ -2878,8 +2872,7 @@
    "id": "0ac773e7-dba1-4b6b-bf45-661230f40f8d",
    "metadata": {},
    "source": [
-    "<a id=\"21-pre-call-features\"></a>\n",
-    "#### 2.1. Pre-call Features\n"
+    "<h3 id=\"21-pre-call-features\">2.1. Pre-call Modeling (Step 1A)</h3>\n"
    ]
   },
   {
@@ -2904,8 +2897,7 @@
    "id": "06a555d5-4e9c-4cd1-9072-ea2c741c815e",
    "metadata": {},
    "source": [
-    "<a id=\"22-code-to-train--evaluate-pre-call-model\"></a>\n",
-    "#### 2.2. Code to Train + Evaluate Pre-call Model"
+    "<h3 id=\"22-code-to-train--evaluate-pre-call-model\">2.2. Campaign Strategy Modeling (Step 1B)</h3>\n"
    ]
   },
   {
@@ -3579,8 +3571,7 @@
    "id": "0ce6bf53-7ab5-4d13-a8e4-beea33f164ab",
    "metadata": {},
    "source": [
-    "<a id=\"23-selecting-the-model-a-step-by-step-strategy\"></a>\n",
-    "### 2.3. Selecting the second model (step 1B)"
+    "<h3 id=\"23-selecting-the-model-a-step-by-step-strategy\">2.3. Manual Model Selection and Evaluation</h3>\n"
    ]
   },
   {
@@ -4208,8 +4199,7 @@
    "id": "8e479e2c-1f3e-457e-b614-df905e91dcf1",
    "metadata": {},
    "source": [
-    "<a id=\"24-create-the-two-stage-prediction-pipeline\"></a>\n",
-    "### 2.4. Create the Two-Stage Prediction Pipeline"
+    "<h3 id=\"24-create-the-two-stage-prediction-pipeline\">2.4. Two-Stage Prediction Pipeline</h3>\n"
    ]
   },
   {
@@ -4364,8 +4354,7 @@
    "id": "83b6d5c8-57dc-4216-aa44-61421c18f599",
    "metadata": {},
    "source": [
-    "<a id=\"25-adjusting-the-decision-threshold-for-both-stages\"></a>\n",
-    "### 2.5. Adjusting the decision threshold for both stages"
+    "<h3 id=\"25-adjusting-the-decision-threshold-for-both-stages\">2.5. Threshold Tuning</h3>\n"
    ]
   },
   {
@@ -4923,8 +4912,7 @@
    "id": "3d6aae0b-ede4-4d3d-bce8-69b56d2e6470",
    "metadata": {},
    "source": [
-    "<a id=\"26-campaign-simulation-best-case-subscription-ranking\"></a>\n",
-    "### 2.6. Campaign Simulation: Best-Case Subscription Ranking"
+    "<h3 id=\"26-campaign-simulation-best-case-subscription-ranking\">2.6. Campaign Simulation</h3>\n"
    ]
   },
   {
@@ -5490,11 +5478,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95d06887-b782-4e75-9028-96bff8f70a36",
+   "id": "d8626195",
    "metadata": {},
    "source": [
-    "<a id=\"3-tangible-results-for-the-bank\"></a>\n",
-    "## Section 3. Tangible results for the Bank:"
+    "<h3 id=\"3-tangible-results-for-the-bank\">Section 3. Tangible Business Results</h3>\n"
    ]
   },
   {
@@ -5818,8 +5805,8 @@
    "id": "7a67e11b-d8f9-4425-955c-6a8a5c0c5242",
    "metadata": {},
    "source": [
-    "<a id=\"final-business-conclusion\"></a>\n",
-    "# Final Business Conclusion:"
+    "<h3 id=\"final-business-conclusion\" style=\"font-size:36px;\">Final Business Conclusion</h3>\n",
+    "\n"
    ]
   },
   {
