Review text and notebook presentation

--- a/TermDepositMarketing_part1.ipynb
+++ b/TermDepositMarketing_part1.ipynb
@@ -1275,7 +1275,9 @@
    "id": "aa39538c-1680-4a1d-9af5-fb981aead397",
    "metadata": {},
    "source": [
-    "We apply targeted transformations (e.g., binning, scaling, encoding) to enrich the dataset and capture non-linear relationships and interactions."
+    "In this section, we apply transformations and encoding strategies to prepare the data for modeling.  \n",
+    "Categorical variables are processed using appropriate techniques such as one-hot and ordinal encoding.  \n",
+    "We also apply domain knowledge to perform binning and feature consolidation where relevant.\n"
    ]
   },
   {
