correct the sum-up table for feature engineering

--- a/TermDepositMarketing_part1.ipynb
+++ b/TermDepositMarketing_part1.ipynb
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "9c4a4531-f3cb-42a5-b522-8d87bd1e918a",
    "metadata": {},
    "outputs": [],
@@ -163,12 +163,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "c8643d31-f522-41c4-8213-a4d5889b977d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('term-deposit-marketing.csv')"
+    "df = pd.read_csv('./data/term-deposit-marketing.csv')"
    ]
   },
   {
@@ -1291,7 +1291,7 @@
     "| `balance`   | Continuous (with outliers)  | Apply log transformation because of high occurence of outliers                                |\n",
     "| `day`       | Ordinal (1–31)              | Keep as-is: behavioral signal observed at beginning and end of month                     |\n",
     "| `duration`  | Continuous (long-tailed)    | Apply log transformation                                              |\n",
-    "| `campaign`  | Count / Discrete            | Binning: (1 call, 2, 3, 4-5, 6+)\n",
+    "| `campaign`  | Count / Discrete            | Binning: (1 call, 2, 3, 4-5, 6+)                 |\n",
     "| `month`     | Categorical (cyclical)      | One-hot-encoding                                                                               |\n",
     "| `job`       | Nominal Categorical         | One-Hot Encoding                                                                              |\n",
     "| `marital`   | Nominal Categorical         | One-Hot Encoding                                                          |\n",
